@@ -1,5 +1,7 @@
 May 16, 2023
   CurationDafGenerator -- now providing DataProviderDTO.cross_reference_dto data for RGD (OMIM xref data still missing)
+  CurationAlleleGenerator -- now providing DataProviderDTO.cross_reference_dto data
+  CurationAGMGenerator -- now providing DataProviderDTO.cross_reference_dto data
 
 May 12, 2023
   CurationDafGenerator -- fixed generation of notes field
